# criclive

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tests.py
.github/workflows/: release.yml  test.yml
criclive/: main.py  tui.py
